# simplepyml

./: .buildinfo  .gitignore  LICENSE  README.md  docs.html  extra.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: docs.doctree  environment.pickle  extra.doctree  index.doctree
.doctrees/extra/: gpu.doctree
.github/workflows/: sphinx.yml
_build/: .buildinfo  genindex.html  objects.inv  searchindex.js
_build/.doctrees/: environment.pickle
docs/: .buildinfo  build.bat  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/autoapidoc/: simplepyml.util.functions.loss.loss.rst.txt  simplepyml.util.functions.rst.txt
docs/_sources/extra/: gpu.rst.txt
docs/autoapidoc/: modules.html  simplepyml.core.html  simplepyml.core.models.mlp.layers.html  simplepyml.core.models.mlp.layers.reshape.html  simplepyml.core.models.mlp.optimizers.optimizer.html  simplepyml.util.functions.activation.activation.html  simplepyml.util.functions.html  simplepyml.util.functions.loss.html  simplepyml.util.functions.loss.mse.html
docs/source/: conf.py  docs.rst
docs/source/_templates/: package.rst_t
extra/: gpu.html
simplepyml/: __init__.py
simplepyml/core/: __init__.py
simplepyml/core/models/: __init__.py
simplepyml/core/models/mlp/: __init__.py  mlp.py  optimizers.py
simplepyml/util/: __init__.py
simplepyml/util/functions/: __init__.py  _activation.py  _derivative.py  _loss.py  activation.py  derivative.py  loss.py
simplepyml/util/functions/activation/: __init__.py  activation.py  linear.py  relu.py  sigmoid.py  tanh.py
(+26 files in other folders)
