[build-system]
requires = [
    "setuptools>=61.0",
    "numpy>=1.19",
    "scipy>=1.9.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "simplepyml"
version = "0.0.1"
authors = [
    {name="Vikram Rangarajan", email="vikram.rangaraja@gmail.com"},
]
description = "A small example package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
GPU = ["cupy"]

[project.urls]
Homepage = "https://vikramrangarajan.github.io/simplepyml"
Issues = "https://github.com/VikramRangarajan/simplepyml/issues"
Documentation = "https://vikramrangarajan.github.io/simplepyml/docs.html"
Repository = "https://github.com/VikramRangarajan/simplepyml"


[tools.setuptools.packages.find]
where = ["simplepyml"]
include = ["simplepyml*"]
exclude = ["test_dir"]
namespaces = false